--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,19 @@
   }
 }
 
+html {
+  font-family: Inter;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Inter;
+}
+
+label {
+  font-family: Inter;
+  font-style: bold;
+  font-size: 16px;
+  line-height: 24px;
 }
