--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,82 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+
+  --radius-xs: 8px;
+  --radius-s: 16px;
+  --radius-m: 24px;
+
+  --size-xs: 24px;
+  --size-s: 32px;
+  --size-m: 48px;
+  --size-l: 56px;
+  --size-xl: 64px;
+
+  --white-50: #fffefe;
+  --white-100: #fdfdfd;
+  --white-200: #fdfcfc;
+  --white-300: #fcfbfb;
+  --white-400: #fbfafa;
+  --white-500: #faf9f9;
+  --white-600: #e4e3e3;
+  --white-700: #b2b1b1;
+  --white-800: #8a8989;
+  --white-900: #696969;
+
+  --mint-50: #f9fcfb;
+  --mint-100: #ebf6f4;
+  --mint-200: #e1f2ee;
+  --mint-300: #d3ece7;
+  --mint-400: #cbe9e2;
+  --mint-500: #bee3db;
+  --mint-600: #adcfc7;
+  --mint-700: #87a19b;
+  --mint-800: #697d78;
+  --mint-900: #505f5c;
+
+  --teal-50: #eef2f2;
+  --teal-100: #c9d8d7;
+  --teal-200: #afc5c4;
+  --teal-300: #8baba9;
+  --teal-400: #8baba9;
+  --teal-500: #52817e;
+  --teal-600: #4b7573;
+  --teal-700: #3a5c59;
+  --teal-800: #2d4745;
+  --teal-900: #223635;
+
+  --slate-50: #eeeff1;
+  --slate-100: #caccd2;
+  --slate-200: #b1b4bc;
+  --slate-300: #8d919e;
+  --slate-400: #777c8b;
+  --slate-500: #555b6e;
+  --slate-600: #4d5364;
+  --slate-700: #3c414e;
+  --slate-800: #3c414e;
+  --slate-900: #24262e;
+
+  --peach-50: #fffaf8;
+  --peach-100: #ffefea;
+  --peach-200: #ffe8df;
+  --peach-300: #ffddd1;
+  --peach-400: #ffd6c8;
+  --peach-500: #ffccba;
+  --peach-600: #e8baa9;
+  --peach-700: #b59184;
+  --peach-800: #8c7066;
+  --peach-900: #6b564e;
+
+  /* --white-50: ;
+  --white-100: ;
+  --white-200: ;
+  --white-300: ;
+  --white-400: ;
+  --white-500: ;
+  --white-600: ;
+  --white-700: ;
+  --white-800: ;
+  --white-900: ; */
 }
 
 @layer base {
@@ -75,4 +151,44 @@ th {
 .ToggleGroupItem[data-state="on"] {
   background-color: #28a4b1;
   color: white;
+}
+
+.clickable {
+  cursor: pointer;
+}
+
+.DialogOverlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  inset: 0;
+}
+
+.DialogContent {
+  background-color: white;
+  border-radius: 6px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 25px;
+}
+
+@keyframes overlayShow {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes contentShow {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -48%) scale(0.96);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
 }
