--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #fffefe;
   --foreground: #171717;
 
   --radius-xs: 8px;
@@ -88,10 +88,67 @@
 }
 
 @theme {
-  --font-primary: Inter;
+  --font-primary: "Helvetica Neue", sans-serif;
 
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+
+  --color-text-primary: var(--slate-900);
+  --color-text-secondary: var(--slate-600);
+  --color-text-tertiary: var(--slate-400);
+  --color-text-disabled: var(--slate-200);
+  --color-text-inverse: #ffffff;
+
+  --color-bg: var(--background);
+  --color-card-bg: var(--color-bg);
+  --color-card-border: var(--white-600);
+
+  --color-button-primary-text: var(--color-text-inverse);
+  --color-button-primary-bg-default: var(--slate-700);
+  --color-button-primary-bg-hover: var(--slate-500);
+  --color-button-primary-bg-active: var(--slate-400);
+
+  --color-button-secondary-border: var(--slate-100);
+  --color-button-secondary-text: var(--color-text-primary);
+  --color-button-secondary-bg-default: var(--white-50);
+  --color-button-secondary-bg-hover: var(--white-500);
+  --color-button-secondary-bg-active: var(--slate-50);
+
+  --color-button-tertiary-text: var(--color-text-primary);
+  --color-button-tertiary-bg-default: transparent;
+  --color-button-tertiary-bg-hover: var(--color-button-secondary-bg-hover);
+  --color-button-tertiary-bg-active: var(--color-button-secondary-bg-active);
+
+  --color-button-toggle-border-default: var(--slate-100);
+  --color-button-toggle-border-active: var(--mint-700);
+  --color-button-toggle-text: var(--color-text-primary);
+  --color-button-toggle-bg-default: var(--white-300);
+  --color-button-toggle-bg-hover: var(--mint-100);
+  --color-button-toggle-bg-active: var(--mint-300);
+  --color-button-toggle-bg-down: var(--mint-500);
+
+  --color-input-border-default: var(--white-600);
+  --color-input-border-active: var(--mint-600);
+  --color-input-bg-default: var(--white-500);
+  --color-input-bg-active: var(--mint-100);
+
+  --color-sidebar-item-bg-default: transparent;
+  --color-sidebar-item-bg-hover: var(--mint-50);
+  --color-sidebar-item-bg-active: var(--mint-100);
+  --color-sidebar-item-bg-down: var(--mint-400);
+
+  --color-button-icon-bg-default: var(--color-button-primary-bg-default);
+  --color-button-icon-bg-hover: var(--color-button-primary-bg-hover);
+  --color-button-icon-bg-active: var(--color-button-primary-bg-active);
+  --color-button-icon-text: var(--color-button-primary-text);
+
+  --color-modal-bg: var(--color-background);
+  --color-modal-border: var(--white-600);
+
+  --color-card-bg: var(--color-bg);
+  --color-card-border: var(--white-600);
+
+  --shadow: 0 4px 16px 0 rgba(119, 124, 139, 0.16);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -102,24 +159,24 @@
 }
 
 html {
-  font-family: Inter;
+  font-family: "Helvetica Neue";
 }
 
 body {
-  font-family: Inter;
+  font-family: "Helvetica Neue";
   font-size: 16px;
   line-height: 24px;
 }
 
 label {
-  font-family: Inter;
+  font-family: "Helvetica Neue";
   font-style: bold;
   font-size: 16px;
   line-height: 24px;
 }
 
 h1 {
-  font-family: Inter;
+  font-family: "Helvetica Neue";
   font-size: 32px;
   font-style: normal;
   font-weight: 400;
@@ -128,7 +185,7 @@ h1 {
 }
 
 h2 {
-  font-family: Inter;
+  font-family: "Helvetica Neue";
   font-size: 24px;
   font-style: normal;
   font-weight: 700;
@@ -136,8 +193,16 @@ h2 {
   letter-spacing: -0.264px;
 }
 
+h4 {
+  font-family: "Helvetica Neue";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px; /* 160% */
+}
+
 h6 {
-  font-family: Inter;
+  font-family: "Helvetica Neue";
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -155,22 +220,6 @@ th {
 
 .clickable {
   cursor: pointer;
-}
-
-.DialogOverlay {
-  background-color: rgba(0, 0, 0, 0.5);
-  position: fixed;
-  inset: 0;
-}
-
-.DialogContent {
-  background-color: white;
-  border-radius: 6px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 25px;
 }
 
 @keyframes overlayShow {
